style.css
/* ... */
.form__item{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
    margin-bottom: 12px;
    margin-top: 4px;
}
.form__input-wrap{
    position: relative;
}
.form__input-big{
    width: 100%;    
}
.form__input-number{
    width: 259px;
}
.form__input-date{
    width: 84px;
}
.form__input-cvc{
    width: 67px;
}
.blue__button{
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 5px;
    background: linear-gradient(91deg, #9DC2F3, #91DCF4);
    border: 0;
    transition: 0.3s ease;
    height: 35px;
    font-size: 14px;   
    color: #223265;
    position: relative;
}
.blue__button:after{
    line-height: 35px;
    border-radius: 5px;
    position: absolute;
    width: 100%;
    top: 0;
    left: 0;
    background: linear-gradient(91deg, #9DC2F3, #91DCF4);
    z-index: 2;
    height: 100%;
}
.create__profile:after{
    content: 'Create profile';
}
.save__button:after{
    content: 'Save';
}
.export__button:after{
    content: 'Export';
}
.import__button:after{
    content: 'Import';
}
.blue__button:before{
    content: '';
    border-radius: 6px;
    position: absolute;
    top: 0px;
    left: 0px;
    transform: translate(-1px, -1px);
    width: calc(100% + 2px);
    height: calc(100% + 2px);
    opacity: 0;
    background: linear-gradient(91deg, #4B84D0, #38A5C8);
    transition: 0.3s ease;
}
.blue__button:hover{
    box-shadow: 5px 5px 30px 0px rgba(145,218,244, 0.3);
    cursor: pointer;
}
.blue__button:active{
    box-shadow: none;
    outline: 0;
}
.blue__button:hover::before{
    opacity: 1;
}
.blue__button:active::before{
    opacity: 1;
}
.disabled__button:after{
    background: #404555;
    color: rgb(143,145,155);
}
.disabled__button:hover{
    box-shadow: none;
    cursor: default;
}
.disabled__button:before{
    display: none;
}
.form__input-name{
    width: 345px;
    margin-right: 20px;
}
.form__item-pay{
    gap: 15px;
}
.form__item-last{
    display: flex;
    gap: 0;
    flex-direction: row;
    justify-content: space-between;
}
.import, .export, .discord {
    width: 440px;
}
.import, .export{
    margin-top: 22px;
}
.discord{
    margin-top: 40px;
    display: flex;
    flex-wrap: wrap;
}
.import h3, .export h3{
    margin-bottom: 4px;
}
.form__import{
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 10px;
}
.form__import textarea{
    width: 440px;
    height: 80px;
    padding: 6px 20px;
    box-sizing: border-box;
    resize: none;
    font-size: 14px;
    color: white;
    font-family: 'Saira', sans-serif;
    outline: 0;
    border-radius: 5px;
    border: 1px solid #91DCF4;
    background-color: transparent;
}
.form__input-discord{
    padding-left: 37px;
    width: 295px;
    margin-bottom: 10px;
}
.discord{
    position: relative;
}
.discord__logo{
    position: absolute;
    top: 9px;
    width: 17px;
    height: 20px;
    left: 10px;
    background-image: url(images/discord__icon.png);
    background-size: cover;
}
.test__button{
    background-color: transparent;
    color: #91DCF4;
    border: 0;
    padding: 0;
    margin-left: 13px;
    font-size: 14px;
    cursor: pointer;
    font-weight: 400;
    font-family: 'Saira', sans-serif;
    padding-left: 19px;
    padding-right: 19px;
    height: 35px;
    transition: 0.3s ease;
    border: 1px solid transparent;
    border-radius: 5px;
}
.test__button:hover{
    border-color: #91dcf4;   
}
.test__button:active{
    border-color: #1f2437;
    color: #1f2437;
    outline: 0;
    background: linear-gradient(91deg, #9DC2F3, #91DCF4);
}
.profiles-delete{
    position: absolute;
    top: 0;
    left: 0px;
    border-radius: 5px;
    padding: 12px 22px 10px;
    box-sizing: border-box;
    width: 100%;
    height: calc(100%);
    background: linear-gradient(91.44deg, #F8A1A1 0%, #F7827A 100%);
    display: flex;
    /* animation: profiledelete 1s forwards; */
    transform: translateY(100px);
    transition: 0.6s ease;
    color: rgba(31,36,55,1);
    justify-content: space-between;
}
.delete-anim-back{
    transform: translateY(100px);
}
.delete-anim-front{
    transform: translateY(0px);
}
@keyframes profiledelete{
    100%{
        transform: translateY(0px);
    }
}
.delete__right{
    display: flex;
}
.delete__timer{
    width: 21px;
    height: 21px;
    border: 1px solid #1f2437;
    border-radius: 100%;
    text-align: center;
    font-size: 12px;
    line-height: 21px;
}
.profiles__item .cancel__button{
    height: 24px;
    margin-left: 5px;
    color: #1f2437;
    padding: 2px;
    transition: 0.3s ease;
}
.cancel__button:hover{
    cursor: pointer;
    transform: scale(1.1);
    /* text-decoration: underline; */
}
.cancel__button:active{
    outline: 0;
    transform: scale(1);
}
.cancel__button:focus{
    outline: 0;
    transform: scale(1.1);
}
.profiles-add{
    width: 100%;
    position: absolute;
    top: 0px;
    left: 0;
    background: linear-gradient(91.44deg, #9DC2F3 0%, #91DCF4 100%);
    border-radius: 5px;
    color: #1f2437;
    transform: translateY(100px);
    height: calc(100% + 0px);
    text-align: center;
    animation: profileadd 5s forwards;
    line-height: 52px;
}
@keyframes profileadd {
    10%{
        transform: translateY(100px);
    }
    30%{
        transform: translateY(0);
    }
    60%{
        transform: translateY(0);
    }
    80%{
        transform: translateY(100px);
    }
    100%{
        transform: translateY(100px)
    }
}
.profile{
    display: flex;
}

